src/modules/ProductPage/components/ProductPageSlider/ProductPageSlider.scss
@import "../../../../styles/colors";
@import "../../../../styles/mixins";

.productPageSlider {
  user-select: none;
  -moz-user-select: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -ms-user-select: none;
}

.productPageSlider .swiper {
  width: 100%;
  height: 100%;
}

.productPageSlider .swiper-slide {
  text-align: center;
  font-size: 18px;
  display: flex;
  justify-content: center;
  align-items: center;

  background-size: cover;
  background-position: center;
}

.productPageSlider.mySwiper2 {
  width: 100%;
  height: 100%;

  max-width: 28.8rem;
  aspect-ratio: 1;
  z-index: 0;
  margin: 0;

  @include on-tablet {
    height: max-content;
    max-width: 100%;

    @include on-tablet {
      max-height: 46.4rem;
    }

    margin-inline: auto;
  }

  .swiper-slide img {
    box-sizing: border-box;
    display: block;
    width: 100%;
    aspect-ratio: 1;
    object-fit: contain;

    @include on-tablet {
      height: 100%;
    }
  }
}

.productPageSlider.mySwiper {
  height: 20%;
  box-sizing: border-box;
  z-index: 0;
  margin: 0;

  @include on-tablet {
    height: max-content;
    min-width: min-content;
  }

  .swiper-wrapper {
    justify-content: center;
    gap: 0.8rem;

    @include on-tablet {
      flex-direction: column;
    }
  }

  .swiper-slide {
    box-sizing: border-box;
    width: 5.2rem !important;
    margin: 0 !important;
    height: 5.2rem;
    opacity: 0.4;
    border: 1px solid $color-elements;
    overflow: hidden;

    border-radius: 0.4rem;

    @include on-tablet {
      cursor: pointer;
      width: 3.5rem !important;
      height: 100%;
    }

    @include on-m-desktop {
      width: 8rem !important;
    }
  }

  .swiper-slide-thumb-active {
    opacity: 1;
    border: 1px solid $color-primary;
  }

  .swiper-slide img {
    display: block;
    width: 100%;
    aspect-ratio: 1;
    object-fit: contain;

  }
}

